# TFM_C2PA_AIGen_Img

./: Cargo.toml  README.md
src/: create_img.rs  main.rs
